--- a/10.2.0/angular/src/app/pharmacist/medicine-list/medicine-list.component.html
+++ b/10.2.0/angular/src/app/pharmacist/medicine-list/medicine-list.component.html
@@ -1,15 +1,25 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Medicine Inventory</h1>
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p-breadcrumb [model]="items" />
         </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="addNewMedicine()">
-            <i class="fa fa-plus-square"></i>
-            {{ 'Create' | localize }}
-          </a>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh" tooltipPosition="top"
+            (click)="refresh()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="addNewMedicine()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center justify-content-between">
+                <span class="pi pi-plus-circle mr-2"></span>
+                <span>Add New Medicine</span>
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -17,84 +27,17 @@
 
   <section class="content px-2 pb-3">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        
-        <!-- 🔎 Search & Filters -->
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <input type="text" class="form-control" name="keyword"
-                       [placeholder]="'SearchWithThreeDot' | localize"
-                       [(ngModel)]="keyword"
-                       (keyup.enter)="list()" />
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-default"
-                          (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas"
-                       [class.fa-angle-up]="advancedFiltersVisible"
-                       [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div>
-              </div>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
             </div>
           </div>
-
-          @if (advancedFiltersVisible) {
-          <div class="card mb-0 mt-1">
-            <div class="card-body">
-              <form class="form-horizontal">
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="form-group row">
-                      <label class="col-md-4 col-form-label">Min Stock</label>
-                      <div class="col-md-8">
-                        <input type="number" class="form-control"
-                               [(ngModel)]="minStock" name="minStock" />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group row">
-                      <label class="col-md-4 col-form-label">Availability</label>
-                      <div class="col-md-8">
-                        <select class="form-control"
-                                [(ngModel)]="isAvailable" name="isAvailable">
-                          <option [ngValue]="undefined">All</option>
-                          <option [ngValue]="true">Available</option>
-                          <option [ngValue]="false">Not Available</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="btn bg-blue" (click)="list()">
-                {{ 'Search' | localize }}
-              </button>
-              <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                {{ 'Clear' | localize }}
-              </button>
-            </div>
-          </div>
-          }
-        </div>
-
-        <!-- 📋 Table -->
-        <div class="card-body table-responsive table-striped table-bordered">
-          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
-                   [value]="primengTableHelper.records"
-                   rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-                   [paginator]="false" [lazy]="true"
-                   [tableStyle]="{ 'min-width': '50rem' }">
+          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)" [value]="primengTableHelper.records"
+            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '50rem' }">
             <ng-template pTemplate="header">
               <tr>
                 <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
@@ -114,25 +57,18 @@
                 <td>{{ record.strength }} {{ record.strengthUnitName }}</td>
                 <td>{{ record.minimumStock }}</td>
                 <td>
-                  <span [class.text-success]="record.isAvailable"
-                        [class.text-danger]="!record.isAvailable">
+                  <span [class.text-success]="record.isAvailable" [class.text-danger]="!record.isAvailable">
                     {{ record.isAvailable ? 'Available' : 'Not Available' }}
                   </span>
                 </td>
                 <td>{{ record.description }}</td>
                 <td>
-                  <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                          (click)="rowMenu.toggle($event); selectedRecord = record"></button>
-                  <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                    <ul class="custom-overlay-menu">
-                      <li (click)="editNewMedicine(selectedRecord)">
-                        <i class="pi pi-pencil"></i> Edit
-                      </li>
-                      <li (click)="delete(selectedRecord)">
-                        <i class="pi pi-trash"></i> Delete
-                      </li>
-                    </ul>
-                  </p-overlayPanel>
+                  <button class="btn btn-sm border rounded-1 px-3" type="button" style="background-color: #f8fafc;"
+                    (click)="rowMenu.toggle($event); selectedReceipt = receipt">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </button>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
                 </td>
               </tr>
             </ng-template>
@@ -142,30 +78,11 @@
             {{ 'NoData' | localize }}
           </div>
         </div>
-
-        <!-- 📌 Pagination -->
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                             #paginator
-                             (onPageChange)="list($event)"
-                             [totalRecords]="primengTableHelper.totalRecordsCount"
-                             [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                             [showCurrentPageReport]="true"
-                             [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                </p-paginator>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
