--- a/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
+++ b/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
@@ -1,214 +1,124 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Invoice</h1>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
                 </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createInvoice()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh"
+                        tooltipPosition="top" (click)="refresh()">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-refresh"></span>
+                        </button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createInvoice()">
+                        <button type="button" class="btn btn-md add-btn">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <span class="pi pi-plus-circle mr-2"></span>
+                                <span>New Invoice</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="content px-2 pb-3">
+    <section class="content px-2 pb-5">
         <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-default"
-                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                                        <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
-                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                                    </button>
-                                </div>
-                            </div>
+            <div class="card mb-0 table-wrapper">
+                <div class="card-body">
+                    <div class="d-flex justify-content-end align-items-center mb-3">
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
                         </div>
                     </div>
-                    @if (advancedFiltersVisible) {
-                    <div class="card mb-0 mt-1">
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row mb-0">
-                                            <label class="col-md-3 col-form-label">
-                                                {{ 'IsActive' | localize }}
-                                            </label>
-                                            <div class="col-md-9 pt-2">
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio" class="custom-control-input" id="isActiveAll"
-                                                        name="isActive" [(ngModel)]="isActive" [value]="undefined"
-                                                        checked />
-                                                    <label class="custom-control-label" for="isActiveAll">
-                                                        {{ 'All' | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline mx-3">
-                                                    <input type="radio" class="custom-control-input" id="isActiveActive"
-                                                        name="isActive" [(ngModel)]="isActive" [value]="true" />
-                                                    <label class="custom-control-label" for="isActiveActive">
-                                                        {{ 'Yes' | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio" class="custom-control-input"
-                                                        id="isActivePassive" name="isActive" [(ngModel)]="isActive"
-                                                        [value]="false" />
-                                                    <label class="custom-control-label" for="isActivePassive">
-                                                        {{ 'No' | localize }}
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="button" class="btn bg-blue">
-                                {{ 'Search' | localize }}
-                            </button>
-                            <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                                {{ 'Clear' | localize }}
-                            </button>
-                        </div>
-                    </div>
-                    }
-                </div>
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="min-width: 150px">
-                                        {{ 'Invoice Number' | localize }}
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        {{ 'Invoice Type' | localize }}
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        {{ 'Invoice Date' | localize }}
-                                    </th>
-                                    <th style="min-width: 100px" pSortableColumn="patientName">
-                                        {{ 'PatientName' | localize }}
-                                        <p-sortIcon field="patientName"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px" pSortableColumn="totalAmount">
-                                        {{ 'TotalAmount' | localize }}
-                                        <p-sortIcon field="totalAmount"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        {{ 'PaymentStatus' | localize }}
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        {{ 'Actions' | localize }}
-                                    </th>
-                                </tr>
-                            </ng-template>
+                    <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+                        rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+                        [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>
+                                    {{ 'Invoice Number' | localize }}
+                                </th>
+                                <th>
+                                    {{ 'Invoice Type' | localize }}
+                                </th>
+                                <th>
+                                    {{ 'Invoice Date' | localize }}
+                                </th>
+                                <th pSortableColumn="patientName">
+                                    {{ 'PatientName' | localize }}
+                                    <p-sortIcon field="patientName"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="totalAmount">
+                                    {{ 'TotalAmount' | localize }}
+                                    <p-sortIcon field="totalAmount"></p-sortIcon>
+                                </th>
+                                <th>
+                                    {{ 'PaymentStatus' | localize }}
+                                </th>
+                                <th>
+                                    {{ 'Actions' | localize }}
+                                </th>
+                            </tr>
+                        </ng-template>
 
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.invoiceNo }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.invoiceType==0?'Daily Invoice':'Full Invoice' }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.invoiceDate | date: 'dd/MM/yyyy' }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.patientName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.totalAmount }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ getStatusString(record.status) }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                                            (click)="rowMenu.toggle($event); selectedRecord = record">
-                                        </button>
-
-                                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                                            <ul class="custom-overlay-menu">
-                                                <li (click)="viewInvoice(selectedRecord)">
-                                                    <i class="pi pi-eye"></i> View Invoice
-                                                </li>
-                                                <li (click)="editInvoice(selectedRecord)">
-                                                    <i class="pi pi-pencil"></i> Edit
-                                                </li>
-                                                <li (click)="delete(selectedRecord)">
-                                                    <i class="pi pi-trash"></i> Delete
-                                                </li>
-                                            </ul>
-                                        </p-overlayPanel>
-                                    </td>
-
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
-                        </div>
-                        <div class="ui-table-footer"></div>
+                        <ng-template pTemplate="body" let-record="$implicit">
+                            <tr>
+                                <td>
+                                    <span>
+                                        {{ record.invoiceNo }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.invoiceType==0?'Daily Invoice':'Full Invoice' }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.invoiceDate | date: 'dd/MM/yyyy' }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.patientName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.totalAmount }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ getStatusString(record.status) }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        style="background-color: #f8fafc;"
+                                        (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                                        [model]="editDeleteMenus" appendTo="body"></p-menu>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        {{ 'NoData' | localize }}
                     </div>
                 </div>
-
-
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
