--- a/10.2.0/angular/src/app/master-table/measure-unit/measure-unit.component.html
+++ b/10.2.0/angular/src/app/master-table/measure-unit/measure-unit.component.html
@@ -1,140 +1,95 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Measure Units</h1>
-        </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createMeasureUnit()">
-            <i class="fa fa-plus-square"></i> Add
-          </a>
+      <div class="d-flex justify-content-between align-items-center">
+        <p-breadcrumb [model]="items"></p-breadcrumb>
+        <div class="btn-toolbar" role="toolbar">
+          <div class="btn-group mr-1" role="group" pTooltip="Refresh" tooltipPosition="top" (click)="list()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group" role="group" (click)="createMeasureUnit()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center">
+                <span class="pi pi-plus-circle mr-2"></span> New Unit
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="keyword"
-                  placeholder="Search by name..."
-                  [(ngModel)]="keyword"
-                  (keyup.enter)="list()" />
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-default" (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas" [class.fa-angle-up]="advancedFiltersVisible" [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div *ngIf="advancedFiltersVisible" class="card mt-2 mb-0">
-            <div class="card-body">
-              <div class="form-group row mb-0">
-                <label class="col-md-3 col-form-label">Active</label>
-                <div class="col-md-9 pt-2">
-                  <div class="custom-control custom-radio d-inline">
-                    <input type="radio" class="custom-control-input" id="isActiveAll" name="isActive" [(ngModel)]="isActive" [value]="undefined" />
-                    <label class="custom-control-label" for="isActiveAll">All</label>
-                  </div>
-                  <div class="custom-control custom-radio d-inline mx-3">
-                    <input type="radio" class="custom-control-input" id="isActiveTrue" name="isActive" [(ngModel)]="isActive" [value]="true" />
-                    <label class="custom-control-label" for="isActiveTrue">Yes</label>
-                  </div>
-                  <div class="custom-control custom-radio d-inline">
-                    <input type="radio" class="custom-control-input" id="isActiveFalse" name="isActive" [(ngModel)]="isActive" [value]="false" />
-                    <label class="custom-control-label" for="isActiveFalse">No</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card-footer">
-              <button class="btn bg-blue" (click)="list()">Search</button>
-              <button class="btn btn-default float-right" (click)="clearFilters()">Clear</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table
-              #dataTable
-              sortMode="multiple"
-              [value]="primengTableHelper.records"
-              [paginator]="false"
-              [lazy]="true"
-              [rows]="primengTableHelper.defaultRecordsCountPerPage"
-              (onLazyLoad)="list($event)"
-              [tableStyle]="{ 'min-width': '30rem' }">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Name</th>
-                  <th>Active</th>
-                  <th>Actions</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-unit>
-                <tr>
-                  <td>{{ unit.name }}</td>
-                  <td>{{ unit.isActive ? 'Yes' : 'No' }}</td>
-                  <td>
-                    <button class="btn btn-sm btn-primary mr-2" (click)="editMeasureUnit(unit)">
-                      <i class="fa fa-edit"></i>
-                    </button>
-                    <button class="btn btn-sm btn-danger" (click)="deleteMeasureUnit(unit)">
-                      <i class="fa fa-trash"></i>
-                    </button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
-              No units found.
-            </div>
-          </div>
-        </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="ml-2 btn-group mr-1" role="group" pTooltip="Filter" tooltipPosition="top"
+              (click)="filterMenu.toggle($event)">
+              <button type="button" class="btn btn-md refresh-btn">
+                <span class="pi pi-filter"></span>
               </button>
             </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator
-                    #paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                  </p-paginator>
-                </div>
-              </div>
+            <p-overlayPanel #filterMenu [dismissable]="true">
+              <ul class="list-unstyled mb-0 p-3">
+                <li class="mb-2">
+                  <p-checkbox [binary]="true" [(ngModel)]="activeFilter.all" size="small"
+                    (onChange)="onFilterChange('all', $event)"></p-checkbox> All
+                </li>
+                <li class="mb-2">
+                  <p-checkbox [binary]="true" [(ngModel)]="activeFilter.isActive" size="small"
+                    (onChange)="onFilterChange('active', $event)"></p-checkbox> Active
+                </li>
+                <li class="mb-2">
+                  <p-checkbox [binary]="true" [(ngModel)]="activeFilter.isNotActive" size="small"
+                    (onChange)="onFilterChange('notActive', $event)"></p-checkbox> Inactive
+                </li>
+              </ul>
+            </p-overlayPanel>
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword"
+                [placeholder]="'SearchByName' | localize" (input)="list()" />
             </div>
+          </div>
+
+          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)" [value]="primengTableHelper.records"
+            [rows]="primengTableHelper.defaultRecordsCountPerPage" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '30rem' }">
+            <ng-template #header>
+              <tr>
+                <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th>Active</th>
+                <th>Actions</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-unit>
+              <tr>
+                <td>{{ unit.name }}</td>
+                <td>{{ unit.isActive ? 'Yes' : 'No' }}</td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-3 mr-1" type="button"
+                    (click)="rowMenu.toggle($event); selectedRecord = unit">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </button>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <div class="primeng-no-data text-center" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            No units found.
           </div>
         </div>
 
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
