--- a/10.2.0/angular/src/app/master-table/test-result-limit/test-result-limit.component.html
+++ b/10.2.0/angular/src/app/master-table/test-result-limit/test-result-limit.component.html
@@ -1,126 +1,70 @@
 <div [@routerTransition]>
   <section class="content-header">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>{{ 'Test Result Limits' | localize }}</h1>
-        </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="create()">
-            <i class="fa fa-plus-square"></i> {{ 'Create' | localize }}
-          </a>
-        </div>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <p-breadcrumb [model]="items"></p-breadcrumb>
+      <div class="btn-toolbar">
+        <button type="button" class="btn btn-md refresh-btn mr-2" pTooltip="Refresh" tooltipPosition="top" (click)="list()">
+          <span class="pi pi-refresh"></span>
+        </button>
+        <button type="button" class="btn btn-md add-btn" (click)="create()">
+          <span class="pi pi-plus-circle mr-2"></span> {{ 'Create' | localize }}
+        </button>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
       <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword"
+                     [placeholder]="'SearchByTestName' | localize" (input)="list()" />
+            </div>
+          </div>
+
+          <p-table #dataTable [value]="primengTableHelper.records" [lazy]="true"
+                   (onLazyLoad)="list($event)" [paginator]="false"
+                   [rows]="primengTableHelper.defaultRecordsCountPerPage"
+                   [tableStyle]="{'min-width':'30rem'}">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>{{ 'Lab Test' | localize }}</th>
+                <th>{{ 'Min Range' | localize }}</th>
+                <th>{{ 'Max Range' | localize }}</th>
+                <th>{{ 'Actions' | localize }}</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-limit>
+              <tr>
+                <td>{{ limit.labTestName }}</td>
+                <td>{{ limit.minRange }}</td>
+                <td>{{ limit.maxRange }}</td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-3 mr-1" type="button"
+                          (click)="rowMenu.toggle($event); selectedRecord = limit">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
                   </button>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  [placeholder]="'SearchWithThreeDot' | localize"
-                  [(ngModel)]="keyword"
-                  (keyup.enter)="list()"
-                />
-                <!-- <div class="input-group-append">
-                  <button type="button" class="btn btn-default" (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas" [class.fa-angle-up]="advancedFiltersVisible" [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div> -->
-              </div>
-            </div>
-          </div>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                          [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
 
-          <div *ngIf="advancedFiltersVisible" class="card mt-2 mb-0">
-            <div class="card-body">
-              <!-- Add custom advanced filters here -->
-              <!-- Currently left blank -->
-            </div>
-            <div class="card-footer">
-              <button class="btn bg-blue" (click)="list()">{{ 'Search' | localize }}</button>
-              <button class="btn btn-default float-right" (click)="clearFilters()">{{ 'Clear' | localize }}</button>
-            </div>
+          <div class="primeng-no-data text-center" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            {{ 'NoData' | localize }}
           </div>
         </div>
 
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table
-              #dataTable
-              [value]="primengTableHelper.records"
-              [paginator]="false"
-              [lazy]="true"
-              [rows]="primengTableHelper.defaultRecordsCountPerPage"
-              (onLazyLoad)="list($event)"
-              [tableStyle]="{ 'min-width': '30rem' }">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>{{ 'Lab Test' | localize }}</th>
-                  <th>{{ 'Min Range' | localize }}</th>
-                  <th>{{ 'Max Range' | localize }}</th>
-                  <th>{{ 'Actions' | localize }}</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-limit>
-                <tr>
-                  <td>{{ limit.labTestName }}</td>
-                  <td>{{ limit.minRange }}</td>
-                  <td>{{ limit.maxRange }}</td>
-                  <td>
-                    <button class="btn btn-sm btn-primary mr-2" (click)="edit(limit)">
-                      <i class="fa fa-edit"></i>
-                    </button>
-                    <button class="btn btn-sm btn-danger" (click)="delete(limit)">
-                      <i class="fa fa-trash"></i>
-                    </button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
-              {{ 'NoData' | localize }}
-            </div>
-          </div>
-        </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator
-                    #paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                  </p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <p-paginator #paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
+                     [totalRecords]="primengTableHelper.totalRecordsCount"
+                     (onPageChange)="list($event)"
+                     [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                     [showCurrentPageReport]="true"
+                     [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
