--- a/10.2.0/angular/src/app/procedure/procedure-receipt/procedure-receipt.component.html
+++ b/10.2.0/angular/src/app/procedure/procedure-receipt/procedure-receipt.component.html
@@ -1,167 +1,88 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>{{ 'ProcedureReceipts' | localize }}</h1>
+
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p-breadcrumb [model]="items" />
         </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createReceipt()">
-            <i class="fa fa-plus-square"></i> {{ 'Create' | localize }}
-          </a>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh" tooltipPosition="top"
+            (click)="refresh()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createReceipt()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center justify-content-between">
+                <span class="pi pi-plus-circle mr-2"></span>
+                <span>New Receipt</span>
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
+            </div>
+          </div>
+          <p-table #dataTable [value]="primengTableHelper.records" [paginator]="false" [lazy]="true"
+            [rows]="primengTableHelper.defaultRecordsCountPerPage" (onLazyLoad)="list($event)"
+            [tableStyle]="{ 'min-width': '30rem' }">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>{{ 'ReceiptNumber' | localize }}</th>
+                <th>{{ 'PatientName' | localize }}</th>
+                <th>{{ 'Date' | localize }}</th>
+                <th>{{ 'TotalAmount' | localize }}</th>
+                <th>{{ 'Payment Method' | localize }}</th>
+                <th>{{ 'Status' | localize }}</th>
+                <th>{{ 'Actions' | localize }}</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-receipt>
+              <tr>
+                <td>{{ receipt.receiptNumber }}</td>
+                <td>{{ receipt.patientName }}</td>
+                <td>{{ receipt.paymentDate | date:'fullDate' }}</td>
+                <td>{{ receipt.totalFee | currency:'INR' }}</td>
+                <td>{{ receipt.paymentMethod===1?'Card':'Cash' }}</td>
+                <td>
+                  <span [class]="receipt.status === 1 ? 'badge-soft-success p-1 rounded' : 'badge-soft-danger p-1 rounded'">
+                    <b>{{ receipt.status === 1 ? 'Paid' : 'Unpaid' }}</b>
+                  </span>
+                </td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-3" type="button" style="background-color: #f8fafc;"
+                    (click)="rowMenu.toggle($event); selectedReceipt = receipt">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
                   </button>
-                </div>
-                <input type="text" class="form-control" name="keyword"
-                  [placeholder]="'SearchWithThreeDot' | localize"
-                  [(ngModel)]="keyword" (keyup.enter)="list()" />
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-default"
-                    (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas"
-                      [class.fa-angle-up]="advancedFiltersVisible"
-                      [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
 
-          @if (advancedFiltersVisible) {
-          <div class="card mb-0 mt-1">
-            <div class="card-body">
-              <form class="form-horizontal">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group row mb-0">
-                      <label class="col-md-3 col-form-label">{{ 'Status' | localize }}</label>
-                      <div class="col-md-9 pt-2">
-                        <div class="custom-control custom-radio d-inline">
-                          <input type="radio" class="custom-control-input"
-                            id="statusAll" name="status"
-                            [(ngModel)]="status" [value]="undefined" checked />
-                          <label class="custom-control-label" for="statusAll">{{ 'All' | localize }}</label>
-                        </div>
-                        <div class="custom-control custom-radio d-inline mx-3">
-                          <input type="radio" class="custom-control-input"
-                            id="statusPaid" name="status"
-                            [(ngModel)]="status" [value]="'Paid'" />
-                          <label class="custom-control-label" for="statusPaid">{{ 'Paid' | localize }}</label>
-                        </div>
-                        <div class="custom-control custom-radio d-inline">
-                          <input type="radio" class="custom-control-input"
-                            id="statusPending" name="status"
-                            [(ngModel)]="status" [value]="'Pending'" />
-                          <label class="custom-control-label" for="statusPending">{{ 'Pending' | localize }}</label>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="btn bg-blue" (click)="list()">{{ 'Search' | localize }}</button>
-              <button type="button" class="btn btn-default float-right"
-                (click)="clearFilters()">{{ 'Clear' | localize }}</button>
-            </div>
-          </div>
-          }
-        </div>
-
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table #dataTable [value]="primengTableHelper.records"
-              [paginator]="false" [lazy]="true"
-              [rows]="primengTableHelper.defaultRecordsCountPerPage"
-              (onLazyLoad)="list($event)"
-              [tableStyle]="{ 'min-width': '30rem' }">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>{{ 'ReceiptNumber' | localize }}</th>
-                  <th>{{ 'PatientName' | localize }}</th>
-                  <th>{{ 'Date' | localize }}</th>
-                  <th>{{ 'TotalAmount' | localize }}</th>
-                  <th>{{ 'Payment Method' | localize }}</th>
-                  <th>{{ 'Status' | localize }}</th>
-                  <th>{{ 'Actions' | localize }}</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-receipt>
-                <tr>
-                  <td>{{ receipt.receiptNumber }}</td>
-                  <td>{{ receipt.patientName }}</td>
-                  <td>{{ receipt.paymentDate | date:'fullDate' }}</td>
-                  <td>{{ receipt.totalFee | currency:'INR' }}</td>
-                  <td>{{ receipt.paymentMethod===1?'Card':'Cash' }}</td>
-                  <td>
-                    <span [class]="receipt.status === 1 ? 'badge badge-success' : 'badge badge-warning'">
-                      {{ receipt.status === 1 ? 'Paid' : 'Unpaid' }}
-                    </span>
-                  </td>
-                  <td>
-                    <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                      (click)="rowMenu.toggle($event); selectedRecord = receipt">
-                    </button>
-
-                    <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                      <ul class="custom-overlay-menu">
-                        <li (click)="viewReceipt(receipt.id)">
-                          <i class="pi pi-file"></i> View Receipt
-                        </li>
-                      </ul>
-                    </p-overlayPanel>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2"
-              *ngIf="primengTableHelper.totalRecordsCount === 0">
-              {{ 'NoData' | localize }}
-            </div>
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            {{ 'NoData' | localize }}
           </div>
         </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator #paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                  </p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <p-paginator #paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
