--- a/10.2.0/angular/src/app/procedure/procedure-requests/procedure-requests.component.html
+++ b/10.2.0/angular/src/app/procedure/procedure-requests/procedure-requests.component.html
@@ -1,132 +1,74 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Procedure Requests</h1>
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p-breadcrumb [model]="items"></p-breadcrumb>
+        </div>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh" tooltipPosition="top"
+            (click)="refresh()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="keyword"
-                  [placeholder]="'SearchWithThreeDot' | localize"
-                  [(ngModel)]="keyword"
-                  (keyup.enter)="list()"
-                />
-                <div class="input-group-append">
-                  <button
-                    type="button"
-                    class="btn btn-default"
-                    (click)="advancedFiltersVisible = !advancedFiltersVisible"
-                  >
-                    <i
-                      class="fas"
-                      [class.fa-angle-up]="advancedFiltersVisible"
-                      [class.fa-angle-down]="!advancedFiltersVisible"
-                    ></i>
-                  </button>
-                </div>
-              </div>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword"
+                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
             </div>
           </div>
-        </div>
+          <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
+            <ng-template #header>
+              <tr>
+                <th>Patient Name</th>
+                <th>Procedure Name</th>
+                <th>{{ 'Status' | localize }}</th>
+                <th>{{ 'Actions' | localize }}</th>
+              </tr>
+            </ng-template>
 
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table
-              #dataTable
-              sortMode="multiple"
-              [value]="primengTableHelper.records"
-              rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-              [paginator]="false"
-              [lazy]="true"
-              [tableStyle]="{ 'min-width': '50rem' }"
-              (onLazyLoad)="list($event)"
-            >
-              <ng-template pTemplate="header">
-                <tr>
-                  <th style="min-width: 150px">Patient Name</th>
-                  <th style="min-width: 150px">Procedure Name</th>
-                  <th style="min-width: 100px">{{ 'Status' | localize }}</th>
-                  <th style="min-width: 130px">{{ 'Actions' | localize }}</th>
-                </tr>
-              </ng-template>
+            <ng-template pTemplate="body" let-record="$implicit">
+              <tr>
+                <td>{{ record.patientName || 'unknown' }}</td>
+                <td>{{ record.procedureName }}</td>
+                <td>
+                  <span [className]="getStatusSeverity(record.status)">
+                    <b>{{ getStatusLabel(record.status) }}</b>
+                  </span>
+                </td>
+                <td>
+                  <button *ngIf="record.status == 0" type="button" class="btn btn-success btn-sm"
+                    (click)="markAsComplete(record.id)">
+                    <i class="pi pi-check"></i> Mark As Complete
+                  </button>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
 
-              <ng-template pTemplate="body" let-record="$implicit">
-                <tr>
-                  <td>{{ record.patientName || 'unknown' }}</td>
-                  <td>{{ record.procedureName }}</td>
-                  <td>
-                    <p-tag
-                      [value]="getStatusLabel(record.status)"
-                      [severity]="getStatusSeverity(record.status)"
-                      [rounded]="true"
-                    >
-                    </p-tag>
-                  </td>
-                  <td>
-                    <button
-                      *ngIf="record.status == 0"
-                      type="button"
-                      class="btn btn-success btn-sm"
-                      (click)="markAsComplete(record.id)"
-                    >
-                      <i class="pi pi-check"></i> Mark As Complete
-                    </button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-              {{ 'NoData' | localize }}
-            </div>
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+            {{ 'NoData' | localize }}
           </div>
         </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    #paginator
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="
                       'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
-                    "
-                  ></p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+                    "></p-paginator>
+
       </div>
     </div>
   </section>
