--- a/10.2.0/angular/src/account/layout/account-header.component.html
+++ b/10.2.0/angular/src/account/layout/account-header.component.html
@@ -1,3 +1,4 @@
 <div class="text-center mb-3">
-    <img src="/assets/img/logo2.png" class=" w-75" />
+    <b><h1>NcoreSoftEMR</h1></b>
+    <!-- <img src="/assets/img/logo2.png" class=" w-75" /> -->
 </div>
