--- a/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
+++ b/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
@@ -1,86 +1,71 @@
 <div [@routerTransition]>
+    <!-- Breadcrumb + Toolbar -->
     <section class="content-header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Doctor Master</h1>
-                </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createDoctor()">
-                        <i class="fa fa-plus-square"></i>
-                        Add
-                    </a>
-                </div>
+        <div class="container-fluid d-flex justify-content-between align-items-center">
+            <p-breadcrumb [model]="items"></p-breadcrumb>
+            <div class="btn-toolbar">
+                <button type="button" class="btn btn-md refresh-btn mr-2" pTooltip="Refresh" tooltipPosition="top"
+                    (click)="list()">
+                    <span class="pi pi-refresh"></span>
+                </button>
+                <button type="button" class="btn btn-md add-btn" (click)="createDoctor()">
+                    <span class="pi pi-plus-circle mr-2"></span> Add
+                </button>
             </div>
         </div>
     </section>
-    <section class="content px-2 pb-3">
+
+    <!-- Table Section -->
+    <section class="content px-2 pb-5">
         <div class="container-fluid">
             <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <!-- No search or advanced filters for Doctor Master -->
-                        </div>
+                <div class="card-body">
+                    <p-table #dataTable [value]="primengTableHelper.records" [lazy]="true" (onLazyLoad)="list($event)"
+                        [paginator]="false" [rows]="primengTableHelper.defaultRecordsCountPerPage"
+                        [tableStyle]="{'min-width':'30rem'}" sortMode="multiple">
+
+                        <!-- Header -->
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th style="min-width: 150px">Name</th>
+                                <th style="min-width: 150px">Fee</th>
+                                <th style="min-width: 130px">Actions</th>
+                            </tr>
+                        </ng-template>
+
+                        <!-- Body -->
+                        <ng-template pTemplate="body" let-doctor>
+                            <tr>
+                                <td>{{ doctor.doctor.fullName }}</td>
+                                <td>{{ doctor.fee }}</td>
+                                <td>
+                                    <!-- Row Menu -->
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        (click)="rowMenu.toggle($event); selectedRecord = doctor">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px','max-width':'160px'}"
+                                        [model]="editDeleteMenus" appendTo="body">
+                                    </p-menu>
+                                </td>
+                            </tr>
+                        </ng-template>
+
+                    </p-table>
+
+                    <!-- No Data -->
+                    <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
+                        No doctors found.
                     </div>
                 </div>
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '30rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="min-width: 150px">Name</th>
-                                    <th style="min-width: 150px">Fee</th>
-                                    <th style="min-width: 130px">Actions</th>
-                                </tr>
-                            </ng-template>
-                            <ng-template pTemplate="body" let-doctor>
-                                <tr>
-                                    <td>{{ doctor.doctor.fullName }}</td>
-                                    <td>{{ doctor.fee }}</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-primary mr-2" (click)="editDoctor(doctor)">
-                                            <i class="fa fa-edit"></i>
-                                        </button>
-                                        <button class="btn btn-sm btn-danger" (click)="deleteDoctor(doctor)">
-                                            <i class="fa fa-trash"></i>
-                                        </button>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                                No doctors found.
-                        </div>
-                        <div class="ui-table-footer"></div>
-                    </div>
-                </div>
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true"
-                                        [currentPageReportTemplate]="
-                                            'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
-                                        "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+                <!-- Paginator -->
+                <p-paginator #paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
+                    [totalRecords]="primengTableHelper.totalRecordsCount" (onPageChange)="list($event)"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true"
+                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+                </p-paginator>
             </div>
         </div>
     </section>
