--- a/10.2.0/angular/src/app/master-table/emergency-procedure/emergency-procedure.component.html
+++ b/10.2.0/angular/src/app/master-table/emergency-procedure/emergency-procedure.component.html
@@ -1,147 +1,116 @@
 <div [@routerTransition]>
+  <!-- Breadcrumb + Toolbar -->
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Emergency Procedures Type</h1>
-        </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createProcedure()">
-            <i class="fa fa-plus-square"></i>
-            Add
-          </a>
+      <div class="d-flex justify-content-between align-items-center">
+        <p-breadcrumb [model]="items"></p-breadcrumb>
+        <div class="btn-toolbar" role="toolbar">
+          <div class="btn-group mr-1" role="group" pTooltip="Refresh" tooltipPosition="top" (click)="list()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group" role="group" (click)="createProcedure()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center">
+                <span class="pi pi-plus-circle mr-2"></span> New Procedure
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <!-- Table Section -->
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <input type="text" class="form-control" name="keyword"
-                  [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                  (keyup.enter)="list()" />
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-default"
-                    (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
-                       [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Advanced Filter -->
-          <div *ngIf="advancedFiltersVisible" class="card mb-0 mt-4">
-            <div class="card-body">
-              <form class="form-horizontal">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group row mb-0">
-                      <label class="col-md-3 col-form-label">Category</label>
-                      <div class="col-md-9 pt-2">
-                        <select class="form-control form-select w-50" [(ngModel)]="category" name="category" (change)="list()">
-                          <option *ngFor="let cat of procedureCategories" [ngValue]="cat.value">
-                            {{ cat.label }}
-                          </option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button type="button" class="btn bg-blue" (click)="list()"> {{ 'Search' | localize }} </button>
-              <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                {{ 'Clear' | localize }}
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <!-- Search + Filter -->
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="ml-2 btn-group mr-1" role="group" pTooltip="Filter" tooltipPosition="top"
+              (click)="filterMenu.toggle($event)">
+              <button type="button" class="btn btn-md refresh-btn">
+                <span class="pi pi-filter"></span>
               </button>
             </div>
+            <p-overlayPanel #filterMenu [dismissable]="true">
+              <ul class="list-unstyled mb-0 p-3">
+                <li class="mb-2">
+                  <p-radioButton name="category" [value]="undefined" [(ngModel)]="category"
+                    inputId="all" (onClick)="onFilterChange('all')"></p-radioButton>
+                  <label for="all" class="ml-2">All</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="category" [value]="ProcedureCategory._0" [(ngModel)]="category"
+                    inputId="minor" (onClick)="onFilterChange('minor')"></p-radioButton>
+                  <label for="minor" class="ml-2">Minor</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="category" [value]="ProcedureCategory._1" [(ngModel)]="category"
+                    inputId="major" (onClick)="onFilterChange('major')"></p-radioButton>
+                  <label for="major" class="ml-2">Major</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="category" [value]="ProcedureCategory._2" [(ngModel)]="category"
+                    inputId="life-saving" (onClick)="onFilterChange('life-saving')"></p-radioButton>
+                  <label for="life-saving" class="ml-2">Life Saving</label>
+                </li>
+              </ul>
+            </p-overlayPanel>
+
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword"
+                placeholder="Search by name..." (input)="list()" />
+            </div>
+          </div>
+
+          <!-- Table -->
+          <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+            [rows]="primengTableHelper.defaultRecordsCountPerPage" [paginator]="false" [lazy]="true"
+            (onLazyLoad)="list($event)" [tableStyle]="{ 'min-width': '40rem' }">
+            
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Default Charge</th>
+                <th>Active</th>
+                <th>Actions</th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-procedure>
+              <tr>
+                <td>{{ procedure.name }}</td>
+                <td> {{ procedure.category == 0 ? 'Minor' : procedure.category == 1 ? 'Major' : 'Life Saving' }} </td>
+                <td>{{ procedure.defaultCharge | currency:'INR' }}</td>
+                <td>{{ procedure.isActive ? 'Yes' : 'No' }}</td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-2" type="button"
+                    (click)="rowMenu.toggle($event); selectedRecord = procedure">
+                    <i class="pi pi-ellipsis-v"></i>
+                  </button>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            No procedures found.
           </div>
         </div>
 
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table
-              #dataTable
-              sortMode="multiple"
-              [value]="primengTableHelper.records"
-              rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-              [paginator]="false"
-              [lazy]="true"
-              [tableStyle]="{ 'min-width': '30rem' }"
-              (onLazyLoad)="list($event)"
-            >
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Name</th>
-                  <th>Category</th>
-                  <th>Default Charge</th>
-                  <th>IsActive</th>
-                  <th>Actions</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-procedure>
-                <tr>
-                  <td>{{ procedure.name }}</td>
-                  <td>
-                    {{ procedure.category == 0 ? 'Minor' : procedure.category == 1 ? 'Major' : 'Life Saving' }}
-                  </td>
-                  <td>{{ procedure.defaultCharge | currency:'INR' }}</td>
-                  <td>{{ procedure.isActive ? 'Yes' : 'No' }}</td>
-                  <td>
-                    <button class="btn btn-sm btn-primary mr-2" (click)="editProcedure(procedure)">
-                      <i class="fa fa-edit"></i>
-                    </button>
-                    <button class="btn btn-sm btn-danger" (click)="deleteProcedure(procedure)">
-                      <i class="fa fa-trash"></i>
-                    </button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-              No procedures found.
-            </div>
-          </div>
-        </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    #paginator
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount"
-                  ></p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <!-- Paginator -->
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+          [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
