--- a/10.2.0/angular/src/app/master-table/medicine-strength-type/medicine-strength-type.component.html
+++ b/10.2.0/angular/src/app/master-table/medicine-strength-type/medicine-strength-type.component.html
@@ -1,140 +1,74 @@
 <div [@routerTransition]>
+  <!-- Breadcrumb + Toolbar -->
   <section class="content-header">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Medicine Strength Types</h1>
-        </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createMedicineStrengthType()">
-            <i class="fa fa-plus-square"></i> Add
-          </a>
-        </div>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <p-breadcrumb [model]="items"></p-breadcrumb>
+      <div class="btn-toolbar">
+        <button type="button" class="btn btn-md refresh-btn mr-2" pTooltip="Refresh" tooltipPosition="top"
+          (click)="list()">
+          <span class="pi pi-refresh"></span>
+        </button>
+        <button type="button" class="btn btn-md add-btn" (click)="createMedicineStrengthType()">
+          <span class="pi pi-plus-circle mr-2"></span> Add
+        </button>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <!-- Table Section -->
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="keyword"
-                  placeholder="Search by name..."
-                  [(ngModel)]="keyword"
-                  (keyup.enter)="list()" />
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-default" (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas" [class.fa-angle-up]="advancedFiltersVisible" [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <!-- Search -->
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" placeholder="Search by name..."
+              (keyup.enter)="list()" />
           </div>
 
-          <div *ngIf="advancedFiltersVisible" class="card mt-2 mb-0">
-            <div class="card-body">
-              <div class="form-group row mb-0">
-                <label class="col-md-3 col-form-label">Active</label>
-                <div class="col-md-9 pt-2">
-                  <div class="custom-control custom-radio d-inline">
-                    <input type="radio" class="custom-control-input" id="isActiveAll" name="isActive" [(ngModel)]="isActive" [value]="undefined" />
-                    <label class="custom-control-label" for="isActiveAll">All</label>
-                  </div>
-                  <div class="custom-control custom-radio d-inline mx-3">
-                    <input type="radio" class="custom-control-input" id="isActiveTrue" name="isActive" [(ngModel)]="isActive" [value]="true" />
-                    <label class="custom-control-label" for="isActiveTrue">Yes</label>
-                  </div>
-                  <div class="custom-control custom-radio d-inline">
-                    <input type="radio" class="custom-control-input" id="isActiveFalse" name="isActive" [(ngModel)]="isActive" [value]="false" />
-                    <label class="custom-control-label" for="isActiveFalse">No</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card-footer">
-              <button class="btn bg-blue" (click)="list()">Search</button>
-              <button class="btn btn-default float-right" (click)="clearFilters()">Clear</button>
-            </div>
+          <!-- Table -->
+          <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+            [rows]="primengTableHelper.defaultRecordsCountPerPage" [paginator]="false" [lazy]="true"
+            (onLazyLoad)="list($event)" [tableStyle]="{'min-width':'40rem'}">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Name</th>
+                <th>Active</th>
+                <th style="width:80px">Actions</th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-strengthType>
+              <tr>
+                <td>{{ strengthType.name }}</td>
+                <td>{{ strengthType.isActive ? 'Yes' : 'No' }}</td>
+                <td>
+                  <!-- Row Menu -->
+                  <button class="btn btn-sm border rounded-1 px-2" type="button"
+                    (click)="rowMenu.toggle($event); selectedRecord = strengthType">
+                    <i class="pi pi-ellipsis-v"></i>
+                  </button>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px','max-width':'150px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <!-- No Data -->
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            No medicine strength types found.
           </div>
         </div>
 
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table
-              #dataTable
-              sortMode="multiple"
-              [value]="primengTableHelper.records"
-              [paginator]="false"
-              [lazy]="true"
-              [rows]="primengTableHelper.defaultRecordsCountPerPage"
-              (onLazyLoad)="list($event)"
-              [tableStyle]="{ 'min-width': '30rem' }">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Name</th>
-                  <th>Active</th>
-                  <th>Actions</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-strengthType>
-                <tr>
-                  <td>{{ strengthType.name }}</td>
-                  <td>{{ strengthType.isActive ? 'Yes' : 'No' }}</td>
-                  <td>
-                    <button class="btn btn-sm btn-primary mr-2" (click)="editMedicineStrengthType(strengthType)">
-                      <i class="fa fa-edit"></i>
-                    </button>
-                    <button class="btn btn-sm btn-danger" (click)="deleteMedicineStrengthType(strengthType)">
-                      <i class="fa fa-trash"></i>
-                    </button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
-              No medicine strength types found.
-            </div>
-          </div>
-        </div>
-
+        <!-- Footer + Paginator -->
         <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator
-                    #paginator
-                    [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                    (onPageChange)="list($event)"
-                    [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                  </p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
+          <p-paginator #paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" (onPageChange)="list($event)"
+            [totalRecords]="primengTableHelper.totalRecordsCount"
+            [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+            [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+          </p-paginator>
         </div>
-
       </div>
     </div>
   </section>
