--- a/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-pharmacist-prescription/edit-pharmacist-prescription.component.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <p-table [value]="selectedPrescriptionItem" class="p-datatable-sm shadow-md rounded"
-                    [tableStyle]="{ 'min-width': '40rem' }" [dataKey]="'_rowId'">
+                    [tableStyle]="{ 'min-width': '50rem' }" [dataKey]="'_rowId'">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Medicine</th>
@@ -37,6 +37,7 @@
                             <th>Duration</th>
                             <th>Instructions</th>
                             <th>Price</th>
+                            <th>Stock</th>
                             <th>Qty</th>
                             <th class="text-right">Line Total</th>
                             <th>Action</th>
@@ -44,28 +45,47 @@
                     </ng-template>
                     <ng-template pTemplate="body" let-itm let-i="rowIndex">
                         <tr>
-                            <td>{{ itm.medicineName }}</td>
+                            <td>
+                                {{ itm.medicineName }}
+                                <div *ngIf="itm.batchNo" class="text-muted small">
+                                    {{ itm.batchNo }}{{ itm.expiryDate ? ' • ' + (itm.expiryDate | date:'dd/MM/yyyy') :
+                                    '' }}
+                                </div>
+                            </td>
                             <td>{{ itm.dosage }}</td>
                             <td>{{ itm.frequency }}</td>
                             <td>{{ itm.duration }}</td>
                             <td>{{ itm.instructions }}</td>
                             <td>{{ itm.unitPrice | number:'1.2-2' }}</td>
-                            <td style="width:140px;">
-                                <p-inputNumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1"
-                                    name="quantity{{itm._rowId}}" (ngModelChange)="onQtyChange(itm, $event)">
+                            <td>
+                                <span [class.text-danger]="getRemainingStock(itm) === 0"
+                                    [class.text-warning]="getRemainingStock(itm) > 0 && getRemainingStock(itm) < 10">
+                                    {{ getStockForItem(itm) }}
+                                </span>
+                            </td>
+                            <td style="width:160px;">
+                                <p-inputNumber [ngModel]="itm.qty" (ngModelChange)="onQtyChange(itm, $event)"
+                                    [showButtons]="true" [min]="1"
+                                    [max]="getMaxPossibleQtyForCurrentBatch(itm, itm.medicineId)"
+                                    name="quantity{{itm._rowId}}">
                                 </p-inputNumber>
                             </td>
                             <td class="text-right">{{ (itm.unitPrice * itm.qty) | number:'1.2-2' }}</td>
                             <td>
-                                <p-button *ngIf="itm._isNew" variant="text" severity="danger" (click)="removeItem(i)"
-                                    icon="fa-solid fa-xmark"></p-button>
+                                <div class="d-flex flex-column">
+                                    <p-button *ngIf="itm._isNew" variant="text" severity="danger"
+                                        (click)="removeItem(i)" icon="fa-solid fa-xmark" class="mb-1" />
+                                    <p-button *ngIf="canSplitToNewBatch(itm)" variant="text" severity="info"
+                                        (click)="splitToNewBatch(itm)" icon="fa-solid fa-code-branch"
+                                        title="Remaining quantity add from another batch" class="mb-1" />
+                                </div>
                             </td>
                         </tr>
                     </ng-template>
 
                     <ng-template pTemplate="footer">
                         <tr>
-                            <td colspan="9">
+                            <td colspan="12">
                                 <div class="text-right">
                                     <h5><strong>Total: ₹{{ getPrescriptionTotal() | number:'1.2-2' }}</strong></h5>
                                 </div>
@@ -75,52 +95,90 @@
                 </p-table>
 
                 <p-toast></p-toast>
-                <form #itemForm="ngForm">
-                    <!-- New Item Row -->
-                    <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
-                        <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
-                            optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
-                            name="itemMedicine" [optionDisabled]="'disabled'" (onChange)="onMedicineChange(item)"
-                            required>
-                        </p-dropdown>
-                        <p-dropdown appendTo="self"
-                            *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
-                            [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
-                            optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
-                            name="itemDosage" required>
-                        </p-dropdown>
-                        <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
-                            pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
-                            placeholder="Dosage" required />
 
-                        <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
-                            optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
-                            name="itemFrequency" required></p-dropdown>
+                <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center justify-content-between mt-3">
+                    <div class="card p-3 mb-0 w-100 mr-3">
+                        <div class="row mb-3">
+                            <div class="col-md-3">
+                                <label><b>Medicine Type</b></label>
+                                <p-dropdown name="itemMedicineType" appendTo="self" class="w-100"
+                                    [(ngModel)]="item.medicineFormId" [options]="medicineTypes" optionLabel="name"
+                                    optionValue="id" placeholder="Select Type" (onChange)="onMedicineTypeSelect(item)"
+                                    required>
+                                </p-dropdown>
+                            </div>
 
-                        <div class="d-flex mr-2">
-                            <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                                class="w-50 mr-1" min="1" required name="durationValue">
-                            <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
-                                optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit" required>
-                            </p-dropdown>
+                            <div class="col-md-3">
+                                <label><b>Medicine</b></label>
+                                <p-dropdown name="itemMedicine" appendTo="self" class="w-100"
+                                    [(ngModel)]="item.medicineId" [options]="medicinesByType" optionLabel="medicineName"
+                                    optionValue="id" placeholder="Select Medicine" (onChange)="onMedicineSelect(item)"
+                                    [disabled]="!item.medicineFormId" [optionDisabled]="isMedicineDisabled.bind(this)"
+                                    required>
+                                </p-dropdown>
+                                <small *ngIf="item.medicineId && isMedicineDisabled(item.medicineId)"
+                                    class="text-warning d-block mt-1">
+                                    This medicine is already included from prescription
+                                </small>
+                            </div>
+
+                            <div class="col-md-3 d-flex flex-column">
+                                <label><b>Dosage</b></label>
+                                <input type="text" pInputText [(ngModel)]="item.dosage" name="itemDosage"
+                                    placeholder="Dosage" [readonly]="true" required style="width: 100% !important;">
+                            </div>
+
+                            <div class="col-md-3 d-flex flex-column">
+                                <label><b>Price</b></label>
+                                <p-inputNumber [(ngModel)]="item.unitPrice" name="medicinePrice" [disabled]="true"
+                                    placeholder="Price"></p-inputNumber>
+                            </div>
                         </div>
 
-                        <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
-                            style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1"
-                            required></textarea>
+                        <div class="row mb-2">
+                            <div class="col-md-3">
+                                <label><b>Frequency</b></label>
+                                <p-dropdown appendTo="self" class="w-100" name="itemFrequency"
+                                    [(ngModel)]="item.frequency" [options]="frequencyOptions" optionLabel="label"
+                                    optionValue="value" placeholder="Select Frequency" required>
+                                </p-dropdown>
+                            </div>
 
-                        <p-inputNumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
-                            class="w-25 mr-2" placeholder="Price" [disabled]="true"></p-inputNumber>
+                            <div class="col-md-3">
+                                <label><b>Duration</b></label>
+                                <div class="d-flex">
+                                    <input type="number" pInputText [(ngModel)]="item.durationValue" min="1"
+                                        placeholder="Value" class="form-control mr-1" name="durationValue" required>
+                                    <p-dropdown appendTo="self" class="flex-fill" [(ngModel)]="item.durationUnit"
+                                        [options]="durationUnits" optionLabel="label" optionValue="value"
+                                        name="itemDurationUnit" required>
+                                    </p-dropdown>
+                                </div>
+                            </div>
 
-                        <p-inputNumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qtyNewItem"
-                            (ngModelChange)="onQtyChange(item, $event)"></p-inputNumber>
+                            <div class="col-md-2 d-flex flex-column">
+                                <label><b>Qty</b></label>
+                                <p-inputNumber [ngModel]="item.qty" (ngModelChange)="onQtyChange(item, $event)"
+                                    [showButtons]="true" [min]="1" name="qtyNewItem">
+                                </p-inputNumber>
+                            </div>
 
-                        <p-button variant="text" severity="success" (click)="addItem()" icon="fa-solid fa-check"
-                            [disabled]="!itemForm.form.valid"></p-button>
-                        <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
-                            icon="fa-solid fa-xmark"></p-button>
+                            <div class="col-md-4 d-flex flex-column">
+                                <label><b>Instructions</b></label>
+                                <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions"
+                                    placeholder="Instructions" rows="1" style="width: 100% !important;"
+                                    required></textarea>
+                            </div>
+                        </div>
                     </div>
-                </form>
+
+                    <div class="d-flex flex-column">
+                        <p-button severity="success" icon="fa-solid fa-check" (click)="addItem()"
+                            [disabled]="!createPharmacistPrescriptionForm.form.valid" class="mb-2"></p-button>
+                        <p-button severity="danger" icon="fa-solid fa-xmark"
+                            (click)="newPrescriptionItem = null"></p-button>
+                    </div>
+                </div>
             </div>
 
             <div class="row mt-2">
@@ -130,22 +188,6 @@
                         class="w-100" required></textarea>
                 </div>
             </div>
-            <!-- Payment Method -->
-            <!-- <div class="row mt-3">
-                <div class="col-md-12">
-                    <label>Payment Method</label>
-                    <div class="d-flex">
-                        <div class="payment-option" [class.active]="paymentMethod === PaymentMethod._1"
-                            (click)="setPaymentMethod(PaymentMethod._1)">
-                            💳 Card
-                        </div>
-                        <div class="payment-option ml-2" [class.active]="paymentMethod === PaymentMethod._0"
-                            (click)="setPaymentMethod(PaymentMethod._0)">
-                            💵 Cash
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
 
         <abp-modal-footer [cancelDisabled]="isSaving" style="flex: 0 0 auto;"
