--- a/10.2.0/angular/src/app/room/room.component.html
+++ b/10.2.0/angular/src/app/room/room.component.html
@@ -1,191 +1,129 @@
 <div [@routerTransition]>
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Add New Room</h1>
-                </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="AddNewRoom()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
-                </div>
-            </div>
+  <!-- Breadcrumb + Toolbar -->
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="d-flex justify-content-between align-items-center">
+        <p-breadcrumb [model]="items"></p-breadcrumb>
+        <div class="btn-toolbar" role="toolbar">
+          <div class="btn-group mr-1" role="group" pTooltip="Refresh" tooltipPosition="top" (click)="list()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group" role="group" (click)="AddNewRoom()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center">
+                <span class="pi pi-plus-circle mr-2"></span> New Room
+              </div>
+            </button>
+          </div>
         </div>
-    </section>
-    <section class="content px-2 pb-3">
-        <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-default"
-                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                                        <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
-                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    @if (advancedFiltersVisible) {
-                    <div class="card mb-0 mt-4">
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row mb-0">
-                                            <label class="col-md-2 col-form-label">
-                                                Status
-                                            </label>
-                                            <div class="col-md-10 pt-2">
-                                                <select class="form-control form-select w-50" [(ngModel)]="status"
-                                                    name="status" (change)="onStatusChange()">
-                                                    <option [ngValue]="undefined">All</option>
-                                                    <option [ngValue]="0">Available</option>
-                                                    <option [ngValue]="1">Occupied</option>
-                                                    <option [ngValue]="2">Reserved</option>
-                                                    <option [ngValue]="3">Maintenance</option>
+      </div>
+    </div>
+  </section>
 
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="button" class="btn bg-blue" (click)="list()">
-                                {{ 'Search' | localize }}
-                            </button>
-                            <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                                {{ 'Clear' | localize }}
-                            </button>
-                        </div>
-                    </div>
-                    }
-                </div>
-                <!-- (onLazyLoad)="list($event)" -->
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th pSortableColumn="roomNumber" style="min-width: 150px">
-                                        Room Number
-                                        <p-sortIcon field="roomNumber"></p-sortIcon>
-                                    </th>
-                                    
-                                    <th pSortableColumn="roomTypeName" style="min-width: 150px">
-                                        Room Type
-                                        <p-sortIcon field="roomTypeName"></p-sortIcon>
-                                    </th>
-                                    
-                                    <th pSortableColumn="floor" style="min-width: 150px">
-                                        Floor
-                                        <p-sortIcon field="floor"></p-sortIcon>
-                                    </th>
-                                    
-                                    <th pSortableColumn="status" style="min-width: 130px">
-                                        Status
-                                        <p-sortIcon field="status"></p-sortIcon>
-                                    </th>
-                                    
-                                </tr>
-                            </ng-template>
-
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.roomNumber}}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.roomTypeName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <p class="m-0">
-                                            Floor No:- <b>{{record.floor}}</b>
-                                        </p>
-                                        <p class="m-0">
-                                            {{record.appointmentTimeSlot}}
-                                        </p>
-                                    </td>
-                                    <td>
-                                        <p-tag 
-                                          [value]="getStatusLabel(record.status)" 
-                                          [severity]="getStatusSeverity(record.status)" 
-                                          [rounded]="true">
-                                        </p-tag>
-                                    </td>
-                                    <td>
-                                        <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                                            (click)="rowMenu.toggle($event); selectedRecord = record">
-                                        </button>
-                                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                                            <ul class="custom-overlay-menu">
-                                                <li (click)="EditNewRoom(selectedRecord)">
-                                                    <i class="pi pi-pencil"></i> Edit
-                                                </li>
-                                                <li (click)="delete(selectedRecord)">
-                                                    <i class="pi pi-trash"></i> Delete
-                                                </li>
-                                            </ul>
-                                        </p-overlayPanel>
-                                    </td>
-                                    <td *ngIf="record.status === 3"></td>
-
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
-                        </div>
-                        <div class="ui-table-footer"></div>
-                    </div>
-                </div>
-
-
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
-                                            'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
-                                        "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <!-- Table Section -->
+  <section class="content px-2 pb-5">
+    <div class="container-fluid">
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <!-- Search + Filter -->
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="ml-2 btn-group mr-1" role="group" pTooltip="Filter" tooltipPosition="top"
+              (click)="filterMenu.toggle($event)">
+              <button type="button" class="btn btn-md refresh-btn">
+                <span class="pi pi-filter"></span>
+              </button>
             </div>
+            <p-overlayPanel #filterMenu [dismissable]="true">
+              <ul class="list-unstyled mb-0 p-3">
+                <li class="mb-2">
+                  <p-radioButton name="status" value="all" [(ngModel)]="statusFilter" 
+                    inputId="all" (onClick)="onFilterChange('all')"></p-radioButton>
+                  <label for="all" class="ml-2">All</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="status" value="0" [(ngModel)]="statusFilter" 
+                    inputId="available" (onClick)="onFilterChange('available')"></p-radioButton>
+                  <label for="available" class="ml-2">Available</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="status" value="1" [(ngModel)]="statusFilter" 
+                    inputId="occupied" (onClick)="onFilterChange('occupied')"></p-radioButton>
+                  <label for="occupied" class="ml-2">Occupied</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="status" value="2" [(ngModel)]="statusFilter" 
+                    inputId="reserved" (onClick)="onFilterChange('reserved')"></p-radioButton>
+                  <label for="reserved" class="ml-2">Reserved</label>
+                </li>
+                <li class="mb-2">
+                  <p-radioButton name="status" value="3" [(ngModel)]="statusFilter" 
+                    inputId="maintenance" (onClick)="onFilterChange('maintenance')"></p-radioButton>
+                  <label for="maintenance" class="ml-2">Maintenance</label>
+                </li>
+              </ul>
+            </p-overlayPanel>
+
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword"
+                [placeholder]="'SearchByRoomNo' | localize" (input)="list()" />
+            </div>
+          </div>
+
+          <!-- Table -->
+          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)" 
+            [value]="primengTableHelper.records"
+            [rows]="primengTableHelper.defaultRecordsCountPerPage" 
+            [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '50rem' }">
+            
+            <ng-template pTemplate="header">
+              <tr>
+                <th pSortableColumn="roomNumber">Room No <p-sortIcon field="roomNumber"></p-sortIcon></th>
+                <th pSortableColumn="roomTypeName">Room Type <p-sortIcon field="roomTypeName"></p-sortIcon></th>
+                <th pSortableColumn="floor">Floor <p-sortIcon field="floor"></p-sortIcon></th>
+                <th>Status</th>
+                <th>Actions</th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-room>
+              <tr>
+                <td>{{ room.roomNumber }}</td>
+                <td>{{ room.roomTypeName }}</td>
+                <td>{{ room.floor }}</td>
+                <td>
+                  <p-tag [value]="getStatusLabel(room.status)" 
+                         [severity]="getStatusSeverity(room.status)" 
+                         [rounded]="true"></p-tag>
+                </td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-3 mr-1" type="button"
+                    (click)="rowMenu.toggle($event); selectedRecord = room">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </button>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'100px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <!-- No Data -->
+          <div class="primeng-no-data text-center" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            No rooms found.
+          </div>
         </div>
-    </section>
+
+        <!-- Paginator -->
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+          [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
+      </div>
+    </div>
+  </section>
 </div>
